<resources>
    <string name="app_name">MultiTools</string>
    <string name="calculators">Calculators</string>
    <string name="sensors">Sensors</string>
    <string name="managers">Managers</string>
    <string name="GPS">GPS</string>

    <string name="combustion">Combustion</string>
    <string name="level">Level</string>
    <string name="environmental">Environmental</string>
    <string name="embedded">Embedded</string>
    <string name="compass">Compass</string>

    <string name="bluetooth">Bluetooth</string>
    <string name="wifi">Wifi</string>
    <string name="camera">Camera</string>

    <string name="spy">Spy</string>
    <string name="gps_map">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="distance_hint">Distance</string>
    <string name="fuel_consumption_hint">Fuel consumption</string>
    <string name="cost_fuel_hint">Cost of fuel</string>
    <string name="calculate">Calculate</string>

    <string name="error_empty">Can not be empty</string>
    <string name="result_dialog_distance">Distance:</string>
    <string name="result_dialog_consumption">Consumption:</string>
    <string name="result_dialog_cost_of_fuel">Cost of fuel:</string>
    <string name="result_dialog_fuel_spent">Fuel spent:</string>
    <string name="result_dialog_money_spent">Money spent:</string>
    <string name="permissions">Permissions</string>
    <string name="granted">Granted</string>
    <string name="forbidden">Forbidden</string>
    <string name="request">Request</string>
    <string name="signal">Signal level</string>
    <string name="wifi_is_disable">Wifi is disable!</string>
    <string name="enable_wifi">Enable WIFI</string>
    <string name="password">Password</string>
    <string name="show_password">Show password</string>
    <string name="here_is_image">Here is image!</string>
    <string name="button_take_picture">Button take picture</string>
    <string name="save">Save</string>
    <string name="stir">Stir</string>
    <string name="permissions_are_required">Permissions are required!</string>
    <string name="lat">Lat:</string>
    <string name="just_sun_icon">Just sun icon</string>
    <string name="landscape">Just a landscape</string>
    <string name="brightness">Just brightness</string>
    <string name="map">Map</string>
    <string name="default_coordinates">Lat: --, Long: --</string>
    <string name="current_coordinates">Current coordinates</string>
    <string name="the_permission_not_granted">The permission not granted!</string>
    <string name="not_supported">Your device does not support environmental sensors!</string>
    <string name="temperature">Temperature:</string>
    <string name="absolute_humidity">Absolute humidity:</string>
    <string name="dew_point">Dew point:</string>
    <string name="not_tracked_devices">Not tracked devices!</string>
    <string name="cancel">Cancel</string>
    <string name="check_all">Check all</string>
    <string name="select">Select</string>

    <string-array name="distance_metric_systems">
        <item>Km</item>
        <item>M</item>
        <item>Cm</item>
    </string-array>
</resources>
