<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="10dp"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/tv_permission_name"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Permission" />

    <TextView
        android:id="@+id/granted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_granted"
        android:drawablePadding="4dp"
        android:text="@string/granted"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/forbidden"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_cancel"
            android:drawablePadding="4dp"
            android:text="@string/forbidden" />

        <Button
            android:id="@+id/btn_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/request" />
    </LinearLayout>

</LinearLayout>