<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <EditText
                android:id="@+id/edt_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/distance_hint"
                android:inputType="numberDecimal|numberSigned"
                android:singleLine="true"
                android:autofillHints="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/sp_distance_metric"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:spinnerMode="dropdown"/>
    </LinearLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edt_fuel_consumption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fuel_consumption_hint"
            android:inputType="numberDecimal|numberSigned"
            android:singleLine="true"
            android:autofillHints="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edt_cost_fuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cost_fuel_hint"
            android:inputType="numberDecimal|numberSigned"
            android:singleLine="true"
            android:autofillHints="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/calculate"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>

</LinearLayout>