<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_hint_not_supported"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/not_supported"
        android:visibility="gone" />

   <RelativeLayout
       android:id="@+id/rl_body"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:padding="50dp">

       <me.zhanghai.android.materialprogressbar.MaterialProgressBar
           android:id="@+id/mpb_temperature"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:minHeight="250dp"
           android:minWidth="260dp"
           app:mpb_progressTint="#FF1C00"
           style="@style/Widget.MaterialProgressBar.ProgressBar"
           android:progress="40"
           android:layout_centerInParent="true" />

       <TextView
           android:id="@+id/tv_temperature"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true"
           tools:text="50 C"
           android:textSize="40sp"
           android:textColor="@color/colorPrimaryDark"/>
       <TextView
           android:id="@+id/tv_humidity"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@id/tv_temperature"
           android:layout_centerHorizontal="true"
           android:drawableStart="@drawable/ic_grain"
           android:textSize="18sp"
           tools:text="30%"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_above="@id/layout_absolute_humidity">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   style="@style/TextAppearance.MaterialComponents.Body2"
                   android:textSize="20sp"
                   android:text="@string/dew_point"/>
               <TextView
                   android:id="@+id/tv_dew_point"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="18sp"
                   style="@style/TextAppearance.AppCompat.Title"
                   android:layout_marginStart="5dp"
                   tools:text="30%"/>
           </LinearLayout>

           <LinearLayout
               android:id="@+id/layout_absolute_humidity"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_alignParentBottom="true"
               android:layout_marginBottom="50dp">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   style="@style/TextAppearance.MaterialComponents.Body2"
                   android:textSize="20sp"
                   android:text="@string/absolute_humidity"/>
               <TextView
                   android:id="@+id/tv_absolute_humidity"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="18sp"
                   style="@style/TextAppearance.AppCompat.Title"
                   android:layout_marginStart="5dp"
                   tools:text="30%"/>
           </LinearLayout>
   </RelativeLayout>

</RelativeLayout>